Images in text runs, or multiple consequtive images, will not cause line breaks. Fixes zillions (or more) of pages. b=32191 r=bernd, dbaron, sr=waterson